src/app/components/games/memory-card-game/memory-card-board/memory-card-board.component.css
.grid {
  display: grid;
  grid-template-columns: repeat(8, 150px);
  gap: 16px;

  justify-content: center;
}

@media (max-width: 1324px) {
  .grid {
    grid-template-columns: repeat(6, 150px);
  }
}

@media (max-width: 1000px) {
  .grid {
    grid-template-columns: repeat(5, 150px);
  }
}

@media (max-width: 840px) {
  .grid {
    grid-template-columns: repeat(5, 100px);
  }
}


@media (max-width: 600px) {
  .grid {
    grid-template-columns: repeat(4, 70px);
  }
}

